Added an actual command

--- a/plugin.yml
+++ b/plugin.yml
@@ -3,3 +3,10 @@ main: com.rayzr522.decoheads.DecoHeads
 version: 0.1
 description: Adds lots of decorative heads that can be used for building / design
 author: Rayzr522
+commands:
+  decoheads:
+    description: Opens the DecoHeads inventory
+    aliases:
+    - dh
+    - heads
+    #permission: decoheads.use
