Made tab-completion smarter + fixed problems with the config

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -21,3 +21,8 @@ gui:
 item:
     name: "&e&n{0}"
     lore: "\n&c&oMade with DecoHeads!\n"
+
+
+button:
+    next-page: "Next Page"
+    previous-page: "Previous Page"
