--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
 	<name>DecoHeads</name>
 	<description>Adds lots of decorative heads that can be used for building / design</description>
 	<url>https://dev.bukkit.org/bukkit-plugins/decoheads/</url>
+	<properties>
+		<project.java.version>8</project.java.version>
+	</properties>
 	<repositories>
 		<repository>
 			<id>spigot-repo</id>
@@ -40,8 +43,8 @@
 				<version>3.5.1</version>
 				<configuration>
 					<!-- http://maven.apache.org/plugins/maven-compiler-plugin/ -->
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.${project.java.version}</source>
+					<target>1.${project.java.version}</target>
 				</configuration>
 			</plugin>
 		</plugins>
