Huge fixes to the Gui system + config updates
- Made the Gui system actually work :P
- The config now checks the config-version. I have ideas for a better
system for this… I’ll do that later :P

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -1,5 +1,6 @@
 prefix: '&8[&6&lDecoHeads&8]&e '
 
+# ------------------------------------------------------------------------------------------ #
 
 command:
     no-permission: "&cYou don't have permission to do that!"
@@ -15,14 +16,22 @@ command:
 
 
 gui:
-    title: "&c&l&nDecoHeads&8 |&e Page {0}"
+    title: "&c&l&nDecoHeads"
 
+# ------------------------------------------------------------------------------------------ #
 
 item:
     name: "&e&n{0}"
     lore: "\n&c&oMade with DecoHeads!\n"
 
+# ------------------------------------------------------------------------------------------ #
 
 button:
     next-page: "Next Page"
     previous-page: "Previous Page"
+    page-number: "&bCurrent page: &3{0}"
+
+# ------------------------------------------------------------------------------------------ #
+
+# Don't change this unless you want your config to reset
+version: 1
