--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>me.rayzr522</groupId>
     <artifactId>decoheads</artifactId>
-    <version>1.5.0</version>
+    <version>1.6.0</version>
     <name>DecoHeads</name>
     <description>Adds lots of decorative heads that can be used for building / design</description>
     <url>https://git.io/decoheads</url>
@@ -26,6 +26,13 @@
             <artifactId>bukkit</artifactId>
             <version>${bukkit.version}</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.milkbowl.vault</groupId>
+            <artifactId>VaultAPI</artifactId>
+            <version>1.6</version>
+            <systemPath>${user.home}/.m2/repository/net/milkbowl/vault/VaultAPI/1.6/VaultAPI-1.6.jar</systemPath>
+            <scope>system</scope>
         </dependency>
     </dependencies>
 
