--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,10 @@
             <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
+        <repository>
+            <id>vault-repo</id>
+            <url>http://nexus.hc.to/content/repositories/pub_releases</url>
+        </repository>
     </repositories>
     <dependencies>
         <dependency>
@@ -31,8 +35,6 @@
             <groupId>net.milkbowl.vault</groupId>
             <artifactId>VaultAPI</artifactId>
             <version>1.6</version>
-            <systemPath>${user.home}/.m2/repository/net/milkbowl/vault/VaultAPI/1.6/VaultAPI-1.6.jar</systemPath>
-            <scope>system</scope>
         </dependency>
     </dependencies>
 
