--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ version: ${project.version}
 description: ${project.description}
 author: Rayzr522
 url: ${project.url}
-depend: [Vault]
+softdepend: [Vault]
 commands:
   decoheads:
     description: Opens the DecoHeads inventory
