--- a/src/main/resources/settings.yml
+++ b/src/main/resources/settings.yml
@@ -1,3 +1,7 @@
+custom-heads:
+    # Allow getting custom heads by username?
+    enabled: true
+
 economy:
     # Use economy?
     enabled: false
@@ -5,3 +9,7 @@ economy:
     show-free-heads: false
     # Default cost for heads. This is used when the cost of a head is set to -1.
     default-cost: 0.0
+    # The cost for custom heads that are retrieved by username.
+    custom-head-cost: 0.0
+
+version: 1
