--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,17 @@
 
 /bin/
 /target/
+
+
 # Multiple build folders with Maven sub-modules
 **/target/
 /out/
+
+# =========================
+# Maven junk
+# =========================
+
+dependency-reduced-pom.xml
 
 # =========================
 # IDE settings files
