--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,10 @@
             <id>bstats-repo</id>
             <url>http://repo.bstats.org/content/repositories/releases/</url>
         </repository>
+        <repository>
+            <id>inventive-repo</id>
+            <url>https://repo.inventivetalent.org/content/groups/public/</url>
+        </repository>
     </repositories>
     <dependencies>
         <dependency>
@@ -45,6 +49,12 @@
             <groupId>org.bstats</groupId>
             <artifactId>bstats-bukkit</artifactId>
             <version>1.2</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.inventivetalent.spiget-update</groupId>
+            <artifactId>bukkit</artifactId>
+            <version>1.4.0</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
@@ -82,6 +92,10 @@
                         <relocation>
                             <pattern>org.bstats.</pattern>
                             <shadedPattern>me.rayzr522.decoheads.lib.bstats.</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>org.inventivetalent.update.spiget.</pattern>
+                            <shadedPattern>me.rayzr522.decoheads.lib.updater.</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
