--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -2,6 +2,10 @@ prefix: '&8[&b&lDecoHeads&8]&3 '
 
 # ------------------------------------------------------------------------------------------ #
 
+update-available: "&bDecoHeads v{0}&3 is available for update! Click below to download:\n \n&b{1}\n "
+
+# ------------------------------------------------------------------------------------------ #
+
 command:
     no-permission: "&cYou need the permission '{0}' to do that!"
     only-players: "&cOnly players in-game can use this command!"
@@ -62,6 +66,8 @@ gui:
             name: "Default head cost"
             prompt: "&ePlease enter a new default head cost in chat:"
             format: "&bCost: &a{0}"
+        updater-enabled:
+          name: "Updater enabled?"
 
     search:
         prompt: "&ePlease enter a term to search for heads:"
