--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>me.rayzr522</groupId>
     <artifactId>decoheads</artifactId>
-    <version>1.5.1</version>
+    <version>1.6.0-BETA</version>
     <name>DecoHeads</name>
     <description>Adds lots of decorative heads that can be used for building / design</description>
     <url>https://git.io/decoheads</url>
